fix for empty button on mobile

--- a/public/less/homepage.less
+++ b/public/less/homepage.less
@@ -429,6 +429,11 @@ h1:after, h2:after {
   z-index: 2;
 }
 
+#intro-panel.apps-page-header {
+  @desktopOnly_bp: 36.25em;
+  @media only screen and (min-width: @desktopOnly_bp) { padding-bottom: 100px; }
+}
+
 #intro-panel .bg {
   animation: appear 1s linear 0.25s 1 normal forwards;
   opacity: 0;
